--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
         
         <h1 class="hidden sm:flex w-64">My social media handles</h1>
         <div class=" flex space-x-4 sm:w-3/6 sm:ml-40 my-0 sm:justify-end ">
-           <a href="www.facebook.com"> <img src="facebook.png" alt="" class="w-8 cursor-pointer h-8"></a>
-           <a href="www.instagram.com"> <img src="instagram.png" alt="" class="w-8 cursor-pointer h-8"></a>
-           <a href="www.linkedin.com"> <img src="linkedin.png" alt="" class="w-8 cursor-pointer h-8"></a>
-           <a href="www.github.com"> <img src="github.png" alt="" class="w-8 cursor-pointer h-8"></a>
+           <a href="https://facebook.com"> <img src="facebook.png" alt="" class="w-8 cursor-pointer h-8"></a>
+           <a href="https://instagram.com"> <img src="instagram.png" alt="" class="w-8 cursor-pointer h-8"></a>
+           <a href="https://linkedin.com"> <img src="linkedin.png" alt="" class="w-8 cursor-pointer h-8"></a>
+           <a href="https://github.com"> <img src="github.png" alt="" class="w-8 cursor-pointer h-8"></a>
         </div>
         </footer>
         
