Removed UnNecessary Borders

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <div class="sm:w-4/5 sm:mx-auto sm:my-0 sm:shadow-2xl sm:rounded-md sm:shadow-black">
         
-    <nav class=" w-full  h-20 flex items-center  fixed text-black font-mono sm:font-bold  sm:w-4/5 border-4 border-slate-700">
+    <nav class=" w-full  h-20 flex items-center  fixed text-black font-mono sm:font-bold  sm:w-4/5 ">
         <img src="programming.png" alt="" class=" hidden sm:inline-block w-8 h-8 mr-4">
         <ul class="flex space-x-8 text-xl ">
             <li class=" text-sm sm:text-xl cursor-pointer hover:bg-black hover:rounded-md hover:text-white"><a href="#about">About me</a></li>
